WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34615
Chromium Mac: Control-A shouldn't select all/Control-C shouldn't copy
https://bugs.webkit.org/show_bug.cgi?id=34615
Summary
Chromium Mac: Control-A shouldn't select all/Control-C shouldn't copy
Avi Drissman
Reported
2010-02-04 14:08:05 PST
Patch to come.
Attachments
Patch to fix
(1.61 KB, patch)
2010-02-04 14:10 PST
,
Avi Drissman
levin
: review-
Details
Formatted Diff
Diff
Now with layout test
(4.27 KB, patch)
2010-02-08 15:49 PST
,
Avi Drissman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Avi Drissman
Comment 1
2010-02-04 14:10:34 PST
Created
attachment 48169
[details]
Patch to fix
David Levin
Comment 2
2010-02-04 17:44:28 PST
Comment on
attachment 48169
[details]
Patch to fix Can't this be verifier with a (platform specific) layout test? Also it looks like the you're changing more than the Control+A behavior (which seems fine), but the ChangeLog and bug only seem to refer to the Ctrl+a behavior. r- due to lack of layout test.
Avi Drissman
Comment 3
2010-02-05 07:06:08 PST
The original bug was about control-A, but when I dug I found control-C too which worked (and shouldn't have) but people didn't notice like they did with control-A. Lemme crank out a test and get back to you.
Avi Drissman
Comment 4
2010-02-08 15:49:13 PST
Created
attachment 48369
[details]
Now with layout test
WebKit Commit Bot
Comment 5
2010-02-09 00:52:12 PST
Comment on
attachment 48369
[details]
Now with layout test Clearing flags on attachment: 48369 Committed
r54535
: <
http://trac.webkit.org/changeset/54535
>
WebKit Commit Bot
Comment 6
2010-02-09 00:52:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug