2010-02-09  Avi Drissman  <avi@chromium.org>

Reviewed by David Levin.

        Chromium Mac: Control-A shouldn't select all/Control-C shouldn't copy
        https://bugs.webkit.org/show_bug.cgi?id=34615

        * fast/events/attempt-select-all-with-wrong-modifier-expected.txt: Added.
        * fast/events/attempt-select-all-with-wrong-modifier.html: Added.
2010-02-09  Avi Drissman  <avi@chromium.org>

        Reviewed by David Levin.

        Chromium Mac: Control-A shouldn't select all/Control-C shouldn't copy
        https://bugs.webkit.org/show_bug.cgi?id=34615

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::keyEventDefault):

Canonical link: https://commits.webkit.org/45848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54535 268f45cc-cd09-0410-ab3c-d52691b4dbfc